feat: implement conversion api

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "installCommand": "pnpm install --frozen-lockfile --prod=false",
+  "installCommand": "pnpm install --frozen-lockfile --prod=false && pnpm prisma generate",
   "buildCommand": "pnpm build",
   "outputDirectory": "public",
   "trailingSlash": false,
