--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,5 +9,10 @@
   "arrowParens": "always",
   "endOfLine": "lf",
   "proseWrap": "always",
-  "plugins": ["prettier-plugin-sh"]
+  "plugins": ["prettier-plugin-sh", "prettier-plugin-sql"],
+
+  "language": "postgresql",
+  "keywordCase": "upper",
+  "dataTypeCase": "upper",
+  "functionCase": "upper"
 }
