--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "typegen": "dotenv -c development -- pnpm typegen:conversion && pnpm lint 'src/**/*generated.ts'",
     "typegen:conversion": "zimic typegen openapi ./docs/spec/openapi.yaml --output src/types/generated.ts --service-name Conversion",
     "test": "dotenv -c test -- dotenv -c development -- vitest",
+    "db": "prisma",
+    "db:dev": "dotenv -c development -- prisma",
     "pre:commit": "lint-staged",
     "pre:push": "concurrently --names style,types,lint 'pnpm style:check .' 'pnpm types:check' 'pnpm lint .'",
+    "deps:up": "docker compose up conversion-database -d --wait",
     "prepare": "husky || echo 'Could not install git hooks with husky.'"
   },
   "dependencies": {
     "@fastify/static": "^7.0.4",
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^4.0.1",
-    "axios": "^1.7.2",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@prisma/client": "^5.17.0",
     "fastify": "^4.28.1",
     "zod": "^3.23.8"
   },
@@ -46,6 +50,8 @@
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
     "prettier-plugin-sh": "^0.14.0",
+    "prettier-plugin-sql": "^0.18.1",
+    "prisma": "^5.17.0",
     "tsup": "^8.2.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4",
