fix: add `DIRECT_URL` to development environment

--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=3001
 
 DATABASE_URL=postgresql://conversion:conversion@localhost:5432/conversion?schema=public
+DIRECT_URL=postgresql://conversion:conversion@localhost:5432/conversion?schema=public
