--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postinstall": "pnpm db:dev generate"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^4.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
